# trustpilot

./: .gitignore  README.md  main.hs  trustpilot.cabal
src/: Main.hs
