name:                trustpilot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/deepredsky/trustpilot#readme
license:             BSD3
license-file:        LICENSE
author:              Rajesh Sharma
maintainer:          rajesh@surf.net.np
copyright:           2017 Rajesh Sharma
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable trustpilot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , cryptohash
                       , text-icu
                       , containers
                       , text
                       , multiset
                       , base16-bytestring
